_sass/minima/custom-styles.scss
// Placeholder to allow defining custom styles that override everything else.
// (Use `_sass/minima/custom-variables.scss` to override variable defaults)

// Mimic belug.us: fixed full-bleed background photo behind a centered,
// 800px-wide white column holding the header/content/footer.
// Background image licence available at WikiCommons:
// https://commons.wikimedia.org/wiki/File:Bellevue_Downtown_Park_aerial,_April_2023.png
body {
  background: url("/assets/images/bg.webp") no-repeat center center fixed;
  background-size: cover;
  background-color: #AEBFEB;
}

.container {
  flex-grow: 1;
  width: 90%;
  max-width: $content-width;
  margin: 0 auto;
  background-color: $background-color;
}

// Links invert (blue background, white text) on hover, like belug.us.
a {
  &:hover {
    background-color: $link-base-color;
    color: #fff;
    text-decoration: none;
  }
}

// Header: centered site title, no accent borders, pipe-separated nav.
.site-header {
  border-top: none;
  border-bottom: none;
  background-color: transparent;
  min-height: 0;
  text-align: center;
  padding-top: 1em;
}

.site-title {
  float: none;
  display: block;
  font-weight: bold;
  font-size: 2.5em;
  letter-spacing: normal;
  padding: 0.5em 0;

  // Unlike nav links, the site title isn't a link on belug.us (plain
  // text heading), so skip the blue-invert hover effect here too.
  &:hover {
    background-color: transparent;
    color: inherit;
  }
}

.site-nav {
  float: none;
  font-size: 1.2em;

  .nav-items {
    display: inline;
  }

  .nav-item {
    margin-right: 0;
    color: $link-base-color;

    // ".site-nav .nav-item" outweighs the generic "a:hover" rule's
    // specificity, so redeclare the hover invert here to keep it visible.
    &:hover {
      background-color: $link-base-color;
      color: #fff;
    }

    // Current page: same invert as hover, persistently applied.
    &.current {
      background-color: $link-base-color;
      color: #fff;
    }

    &:not(:last-child) {
      margin-right: 0;
    }
  }

  @include media-query($on-medium) {
    position: static;
    background-color: transparent;
    border: none;
    text-align: center;

    label[for="nav-trigger"] {
      display: none;
    }

    .nav-items {
      display: inline;
    }

    #nav-trigger ~ .nav-items {
      display: inline;
    }

    .nav-item {
      display: inline;
      margin-left: 0;
      padding: 0;
    }
  }
}

// Footer: single centered copyright line, like belug.us.
.site-footer {
  border-top: none;
  color: #888;
  font-size: .7em;
  line-height: 1.4em;
  text-align: center;
  padding: 1em 0;
}

